fastmetrics-derive/tests/ui/fail/encode_label_set/non_struct.rs
use fastmetrics_derive::EncodeLabelSet;

// This should fail because EncodeLabelSet can only be derived for structs
#[derive(EncodeLabelSet)]
enum NotAStruct {
    Variant1,
    Variant2,
}

fn main() {}
